feat: Implement simple GitHub-based update system
BREAKING CHANGE: Removed Tauri Updater Plugin

Replaced complex signed updater with simple GitHub Release checker:
- ✅ No code signing required
- ✅ No pubkey/private key needed
- ✅ No signature validation errors
- ✅ Simple version check via GitHub API
- ✅ User downloads installer from GitHub Release page

Changes:
- Removed updater plugin from tauri.conf.json
- Removed createUpdaterArtifacts flag
- Created custom UpdateChecker component
- Simplified GitHub workflow (no latest.json generation)
- Added UPDATE_SYSTEM.md documentation

How it works:
1. App checks GitHub Releases API on startup
2. Compares current version with latest release
3. Shows dialog if update available
4. Opens GitHub release page in browser
5. User downloads & installs manually

Benefits:
- No Apple Developer Account needed (/year saved)
- No Windows Code Signing Certificate needed (-300/year saved)
- Works immediately without setup
- Transparent - user sees GitHub release
- Secure - downloads directly from GitHub

User Experience:
- Clean update dialog
- One-click to release page
- Manual download & install
- No signature warnings during update check

Build will now succeed without errors! ✅

--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -185,49 +185,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  generate-updater-json:
-    needs: [create-release, build-tauri]
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Generate latest.json without signatures
-        run: |
-          echo "Generating latest.json (no signature validation)..."
-          mkdir -p release-temp
-          
-          cat <<EOF > release-temp/latest.json
-          {
-            "version": "${{ needs.create-release.outputs.version }}",
-            "notes": "Auto-generated release notes for v${{ needs.create-release.outputs.version }}",
-            "pub_date": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
-            "platforms": {
-              "darwin": {
-                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2.app.tar.gz"
-              },
-              "windows": {
-                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_x64-setup.exe"
-              },
-              "linux": {
-                "url": "https://github.com/${{ github.repository }}/releases/download/v${{ needs.create-release.outputs.version }}/FrameTrain.2_${{ needs.create-release.outputs.version }}_amd64.AppImage"
-              }
-            }
-          }
-          EOF
-          
-          echo "Generated latest.json:"
-          cat release-temp/latest.json
-      
-      - name: Upload latest.json
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ needs.create-release.outputs.version }}
-          files: release-temp/latest.json
-          fail_on_unmatched_files: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   notify-release:
-    needs: [create-release, build-tauri, generate-updater-json]
+    needs: [create-release, build-tauri]
     runs-on: ubuntu-latest
     
     steps:
@@ -235,4 +194,4 @@ jobs:
         run: |
           echo "✅ Release v${{ needs.create-release.outputs.version }} created successfully!"
           echo "🔗 Release URL: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.create-release.outputs.version }}"
-          echo "🔐 Updates are cryptographically signed and secure!"
+          echo "📦 Installers ready for all platforms!"
