--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -18,17 +18,10 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     outputs:
-      release_id: ${{ steps.create-release.outputs.id }}
-      release_upload_url: ${{ steps.create-release.outputs.upload_url }}
       version: ${{ steps.get_version.outputs.version }}
     
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
       
       - name: Get version
         id: get_version
@@ -40,7 +33,6 @@ jobs:
           fi
       
       - name: Create Release
-        id: create-release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.get_version.outputs.version }}
@@ -57,18 +49,14 @@ jobs:
             
             ### 📦 Downloads
             Choose your platform below:
-            - **Windows**: .msi installer
-            - **macOS**: .dmg installer (Apple Silicon & Intel)
-            - **Linux**: .AppImage (portable)
+            - **macOS**: Download `.dmg` file below
+            - **Windows**: Download `.exe` or `.msi` file below
+            - **Linux**: Download `.AppImage` or `.deb` file below
             
             ### 🔐 Installation
             1. Download the installer for your platform
             2. Install the application
             3. Log in with your API key from [frame-train.vercel.app](https://frame-train.vercel.app/dashboard)
-            
-            ### 📖 Documentation
-            - [User Guide](https://frame-train.vercel.app/docs)
-            - [API Documentation](https://frame-train.vercel.app/docs/api)
             
             ### ⚠️ System Requirements
             - **Windows**: Windows 10/11 (64-bit)
@@ -76,10 +64,6 @@ jobs:
             - **Linux**: Ubuntu 20.04 or later (or equivalent)
             - **RAM**: 8GB minimum, 16GB recommended
             - **Storage**: 2GB free space
-            
-            ---
-            
-            **Full Changelog**: https://github.com/${{ github.repository }}/compare/v${{ steps.get_version.outputs.version }}
           draft: false
           prerelease: false
         env:
@@ -92,15 +76,12 @@ jobs:
       matrix:
         include:
           - platform: 'macos-latest'
-            args: ''
             rust_target: 'aarch64-apple-darwin'
 
           - platform: 'ubuntu-22.04'
-            args: ''
             rust_target: 'x86_64-unknown-linux-gnu'
 
           - platform: 'windows-latest'
-            args: ''
             rust_target: 'x86_64-pc-windows-msvc'
 
     runs-on: ${{ matrix.platform }}
@@ -128,26 +109,11 @@ jobs:
         working-directory: ./desktop-app2
         run: npm ci
       
-      - name: Build Tauri App
+      - name: Build Tauri App (NO SIGNING)
         working-directory: ./desktop-app2
-        run: npm run tauri:build -- ${{ matrix.args }}
+        run: npm run tauri:build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Debug - List generated artifacts
-        run: |
-          echo "=== Build artifacts created ===" 
-          if [ "${{ matrix.platform }}" == "macos-latest" ]; then
-            echo "macOS artifacts:"
-            find desktop-app2/src-tauri/target -name "*.dmg" -o -name "*.app.tar.gz" -o -name "*.sig" 2>/dev/null || true
-          elif [ "${{ matrix.platform }}" == "windows-latest" ]; then
-            echo "Windows artifacts:"
-            find desktop-app2/src-tauri/target -name "*.msi" -o -name "*.exe" -o -name "*.sig" 2>/dev/null || true
-          else
-            echo "Linux artifacts:"
-            find desktop-app2/src-tauri/target -name "*.AppImage" -o -name "*.deb" -o -name "*.rpm" -o -name "*.sig" 2>/dev/null || true
-          fi
-        shell: bash
       
       - name: Upload Release Assets (macOS)
         if: matrix.platform == 'macos-latest'
@@ -155,8 +121,7 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/**/release/bundle/dmg/*.dmg
-            ./desktop-app2/src-tauri/target/**/release/bundle/macos/*.app.tar.gz
+            ./desktop-app2/src-tauri/target/release/bundle/dmg/*.dmg
           fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -167,8 +132,8 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/**/release/bundle/msi/*.msi
-            ./desktop-app2/src-tauri/target/**/release/bundle/nsis/*.exe
+            ./desktop-app2/src-tauri/target/release/bundle/msi/*.msi
+            ./desktop-app2/src-tauri/target/release/bundle/nsis/*.exe
           fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -179,8 +144,8 @@ jobs:
         with:
           tag_name: v${{ needs.create-release.outputs.version }}
           files: |
-            ./desktop-app2/src-tauri/target/**/release/bundle/appimage/*.AppImage
-            ./desktop-app2/src-tauri/target/**/release/bundle/deb/*.deb
+            ./desktop-app2/src-tauri/target/release/bundle/appimage/*.AppImage
+            ./desktop-app2/src-tauri/target/release/bundle/deb/*.deb
           fail_on_unmatched_files: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -194,4 +159,4 @@ jobs:
         run: |
           echo "✅ Release v${{ needs.create-release.outputs.version }} created successfully!"
           echo "🔗 Release URL: https://github.com/${{ github.repository }}/releases/tag/v${{ needs.create-release.outputs.version }}"
-          echo "📦 Installers ready for all platforms!"
+          echo "📦 Installers ready for download!"
